--- a/src/data/intent_wrong_command.yml
+++ b/src/data/intent_wrong_command.yml
@@ -3,36 +3,27 @@ version: "3.1"
 nlu:
 - intent: wrong_command
   examples: |
-    - корректируйте ошибку
-    - корректируй команду
-    - пофиксите ошибку
-    - поправь команду
-    - правь действие
+    - корректируйте действие
     - поправь действие
-    - исправьте команду
-    - поправь ошибку
-    - исправь ошибку
-    - корректируйте команду
-    - измените действие
-    - правьте команду
-    - пофикси действие
-    - корректируй ошибку
+    - пофиксите ошибку
+    - поправьте действие
     - пофикси команду
     - корректируй действие
-    - исправьте ошибку
-    - измените ошибку
-    - исправьте действие
-    - правь ошибку
-    - поправьте ошибку
-    - измените команду
-    - правьте ошибку
-    - корректируйте действие
-    - измени команду
-    - поправьте команду
-    - исправь действие
-    - правь команду
-    - правьте действие
-    - пофиксите команду
-    - пофикси ошибку
-    - поправьте действие
     - исправь команду
+    - поправь команду
+    - правь ошибку
+    - исправь ошибку
+    - исправьте команду
+    - измени действие
+    - правьте действие
+    - поправьте команду
+    - корректируйте ошибку
+    - пофикси ошибку
+    - пофикси действие
+    - поправьте ошибку
+    - корректируй команду
+    - исправьте действие
+    - измени ошибку
+    - исправьте ошибку
+    - корректируй ошибку
+    - правь команду
