--- a/src/data/stories.yml
+++ b/src/data/stories.yml
@@ -2,57 +2,8 @@ version: "3.1"
 
 stories:
 
-  - story: Send analyze command
+  - story: send command
     steps:
-      - intent: analyze
+      - intent: command
       - action: action_send_command
-
-  - story: Send around command
-    steps:
-      - intent: around
-      - action: action_send_command
-
-  - story: Send find command
-    steps:
-      - intent: find
-      - action: action_send_command
-
-  - story: Send follow command
-    steps:
-      - intent: follow
-      - action: action_send_command
-
-  - story: Send monitor command
-    steps:
-      - intent: monitor
-      - action: action_send_command
-
-  - story: Send move command
-    steps:
-      - intent: move
-      - action: action_send_command
-
-  - story: Send move_dir command
-    steps:
-      - intent: move_dir
-      - action: action_send_command
-
-  - story: Send patrol command
-    steps:
-      - intent: patrol
-      - action: action_send_command
-
-  - story: Send rotate command
-    steps:
-      - intent: rotate
-      - action: action_send_command
-
-  - story: Send rotate_dir command
-    steps:
-      - intent: rotate_dir
-      - action: action_send_command
-
-  - story: Send stop command
-    steps:
-      - intent: stop
-      - action: action_send_command
+      - action: action_reset_slots
