--- a/conda_env/rasa_dev.yml
+++ b/conda_env/rasa_dev.yml
@@ -1,7 +1,10 @@
 name: rasa_dev
 channels:
+  - nvidia
   - defaults
 dependencies:
+  - cudatoolkit
+  - cudnn
   - pip=23.0.1
   - python=3.10
   - pip:
