эксперименты с заполнением форм

--- a/src/data/intent_nlu_fallback.yml
+++ b/src/data/intent_nlu_fallback.yml
@@ -3,53 +3,28 @@ version: "3.1"
 nlu:
 - intent: nlu_fallback
   examples: |
-    - рЮАтМ48
-    - нАББяь8н6фМЭ9йрфЭ
-    - эЪПЭДЮНИ сыо
-    - ц6х1Ск Э
-    - вСПоБэПх55
-    - сдЕ5МИ 0ЬЭ пт4 гкь
-    - хШоэоУШ 9ъх
-    - Щё1хЩ49йК
-    - ссюГЬ 1ва1гК
-    - Б83эчАюЕфЙрЩпЧ8
-    - ЙЕвш3ЁрщИщПАэргЖ3Л8ЩвЛ
-    - Оолы8рфзКЮдып54
-    - мнф
-    - РаНТдк пБНМи
-    - еЩ9ЪЗ РЁЙыЫсыВу
-    - КХ й 0Вщ
-    - Ъо гОЪГПюСАЩВ3МэШтэ
-    - КИыЩЩ
-    - он Ы268
-    - цНйЛ0з 
-    - ОЭ6 5Ж
-    - ыЮПУлЗФгихЪЗкзаэОщеЭ
-    - чтлсъБ7тПВ7ХПСввьщЧпТС
-    -  ш 40хвРЖ
-    - дБКЪГБб3зНЖЖЧщЁюЗНН
-    - нЁ34ёЙЛщдрЮ3
-    - НэияЧ0йуМпОЬМаУэВАр
-    - НмйКаН2шМЙЯосЦм ЙМОДп
-    - азлВнНЮоВЮпд
-    - д2ДдбЬд 1 
-    -  ыХеМшХ нЁжЪО
-    - Цяс иъйЕшаёЭ
-    - фэуЦн97южа1юмяЬиБТКЩкыЖ
-    - РО1ШБы1Б 2 нщА
-    - 24ШяЫХьПм эцИ ё
-    - УСхОщУжыЯ
-    - УудМ 
-    - Йх УЧШЗьЙуэ эВ
-    - ыЬАхцИхппНЙ8ьХ
-    - оОш еёНйд
-    - кчёХЩхЦ35
-    - ЫзЦЬФхТЦЯШЧРРтРюК
-    - Ж 4Ч6 3ОНр ярЩАцШЗ
-    - 82ёГЧЪ3щьЭ
-    - ДХ5чён5
-    - 4р0сх1
-    - гоЪЫИУдЪК0 9фноС
-    - еЧЧлёИДЕЗняЗ
-    - Э6 АЭ
-    - УшяпцяНлдЁБыПц
+    - жчьБЛЁуяИ5хСИЁрФк
+    - БфЁуч0ЗфЗйЗ
+    - ь0Х7Э
+    - щЁ6АХ3ХтхЙЁ4Ап
+    - ФВчКВъ 8к ж20БЬАЙУ
+    - ЬюХХт
+    - ГФнЖ4йУЖхЦпйДГЖ7ыДЫ7ихТ
+    - 607 дУИфИИЮФ
+    -  ог6шПГВСуэ7ЗуЛай3ж
+    - ПыъзпЛН
+    -  ё7тгпщНСБчдТн
+    - ЙньЩб жйкОЯтёб
+    - 4ЙЮрулЪёЗнЫЕ С2Н4ЯГзЖп
+    - дкОЛжжц2ЛРхо 76ЗыЛъшН
+    - ФБМЖОЙщкЕКФШЬфНФ
+    - К 4ЯапМЮЛЕфлжёцд8ДНаэ
+    - Ь Яж 3хКъ0ейфЯ8вт
+    -  0Б ЮсЕпхВЗ9ДООи
+    -  хЖ07яХ лмоъ Ы
+    -  бжРлФзъШрээЙъай
+    - ЯщМфбьшшЫ
+    - в94н0аЦАл
+    - ЭЧц8шёиБиЕБхн Ин
+    - ёЩнеаЕмюЛжЯс ъоН пФдь7ж
+    - чгЕчои ыФ9УК5сЖывэ6Ы
