--- a/src/data/intent_wrong_command.yml
+++ b/src/data/intent_wrong_command.yml
@@ -3,27 +3,21 @@ version: "3.1"
 nlu:
 - intent: wrong_command
   examples: |
-    - корректируйте действие
-    - поправь действие
-    - пофиксите ошибку
-    - поправьте действие
-    - пофикси команду
-    - корректируй действие
-    - исправь команду
-    - поправь команду
-    - правь ошибку
-    - исправь ошибку
-    - исправьте команду
-    - измени действие
-    - правьте действие
-    - поправьте команду
-    - корректируйте ошибку
-    - пофикси ошибку
-    - пофикси действие
-    - поправьте ошибку
-    - корректируй команду
-    - исправьте действие
-    - измени ошибку
     - исправьте ошибку
-    - корректируй ошибку
+    - корректируйте ошибку
+    - измени ошибку
+    - поправь команду
+    - пофиксите действие
+    - пофикси ошибку
+    - пофиксите команду
+    - измените действие
+    - корректируйте команду
+    - корректируйте действие
+    - измени команду
+    - поправьте команду
+    - пофикси команду
     - правь команду
+    - корректируй команду
+    - поправь действие
+    - измените ошибку
+    - корректируй ошибку
