--- a/src/data/stories.yml
+++ b/src/data/stories.yml
@@ -17,3 +17,53 @@ stories:
       - active_loop: null
       - action: utter_send_command
       - action: action_reset_slots
+
+  - story: command move object
+    steps:
+      - intent: command_move_subject
+        entities:
+          - subject:
+            role: object
+      - action: feature_form
+      - active_loop: feature_form
+      - slot_was_set:
+          - requested_slot: feature
+      - active_loop: null
+      - action: utter_send_command
+      - action: action_reset_slots
+
+  - story: command move direction
+    steps:
+      - intent: command_move_subject
+        entities:
+          - subject:
+            role: direction
+      - action: feature_form
+      - active_loop: feature_form
+      - slot_was_set:
+          - requested_slot: feature
+      - active_loop: null
+      - action: utter_send_command
+      - action: action_reset_slots
+
+  - story: command move object with relation
+    steps:
+      - intent: command_move_subject
+        entities:
+          - subject:
+            role: object
+          - subject:
+            role: addition
+          - relation
+      - action: utter_send_command
+      - action: action_reset_slots
+
+  - story: command move direction with meters
+    steps:
+      - intent: command_move_subject
+        entities:
+          - subject:
+            role: direction
+          - distance
+      - action: utter_send_command
+      - action: action_reset_slots
