--- a/src/data/stories.yml
+++ b/src/data/stories.yml
@@ -1,10 +1,31 @@
 version: "3.1"
 
 stories:
-
-  - story: Команда с заполнением всех слотов
+  - story: действие с объектом
     steps:
-      - intent: command_move_subject
+      - intent: action+objects
+      - action: relation_form
+      - active_loop: relation_form
+      - slot_was_set:
+          - requested_slot: relation
+      - active_loop: null
+      - action: utter_send_command
+      - action: action_reset_slots
+
+  - story: действие с направлением
+    steps:
+      - intent: action+directions
+      - action: distance_form
+      - active_loop: distance_form
+      - slot_was_set:
+          - requested_slot: distance
+      - active_loop: null
+      - action: utter_send_command
+      - action: action_reset_slots
+
+  - story: действие
+    steps:
+      - intent: action
       - action: subject_form
       - active_loop: subject_form
       - slot_was_set:
@@ -15,55 +36,5 @@ stories:
       - slot_was_set:
           - requested_slot: feature
       - active_loop: null
-      - action: utter_send_command
-      - action: action_reset_slots
-
-  - story: Команда со всеми слотами для объектов
-    steps:
-      - intent: command_move_subject
-      - slot_was_set:
-          - subject
-      - slot_was_set:
-          - relation
-      - slot_was_set:
-          - addition
-      - action: utter_send_command
-      - action: action_reset_slots
-
-  - story: Команда со всеми слотами для направлений
-    steps:
-      - intent: command_move_subject
-      - slot_was_set:
-          - subject
-      - slot_was_set:
-          - distance
-      - action: utter_send_command
-      - action: action_reset_slots
-
-  - story: Команда с объектами
-    steps:
-      - intent: command_objects
-      - action: subject_form
-      - active_loop: subject_form
-      - slot_was_set:
-          - requested_slot: subject
-      - active_loop: null
-      - action: feature_form
-      - active_loop: feature_form
-      - slot_was_set:
-          - requested_slot: feature
-      - active_loop: null
-      - action: utter_send_command
-      - action: action_reset_slots
-
-  - story: Команда со всеми слотами для объектов
-    steps:
-      - intent: command_objects
-      - slot_was_set:
-          - subject
-      - slot_was_set:
-          - relation
-      - slot_was_set:
-          - addition
       - action: utter_send_command
       - action: action_reset_slots
