обновлены домен, истории и конфигурация rasa

--- a/src/configs/config_base.yml
+++ b/src/configs/config_base.yml
@@ -15,11 +15,13 @@ pipeline:
   dimensions:
   - distance
   - duration
+  - ordinal
 - name: DucklingEntityExtractor
   url: http://localhost:8000
   locale: en_EN
   dimensions:
   - temperature
+  - numeral
 - name: DIETClassifier
   use_masked_language_model: true
   constrain_similarities: true
