--- a/src/data/stories.yml
+++ b/src/data/stories.yml
@@ -9,7 +9,7 @@ stories:
       - slot_was_set:
           - requested_slot: relation
       - active_loop: null
-      - action: utter_send_command
+      - action: action_send_command
       - action: action_reset_slots
 
   - story: действие с направлением
@@ -20,7 +20,7 @@ stories:
       - slot_was_set:
           - requested_slot: distance
       - active_loop: null
-      - action: utter_send_command
+      - action: action_send_command
       - action: action_reset_slots
 
   - story: патрулирование
@@ -31,7 +31,7 @@ stories:
       - slot_was_set:
           - requested_slot: route
       - active_loop: null
-      - action: utter_send_command
+      - action: action_send_command
       - action: action_reset_slots
 
   - story: действие
@@ -47,11 +47,11 @@ stories:
       - slot_was_set:
           - requested_slot: feature
       - active_loop: null
-      - action: utter_send_command
+      - action: action_send_command
       - action: action_reset_slots
 
   - story: простое действие
     steps:
       - intent: simple_action
-      - action: utter_send_command
+      - action: action_send_command
       - action: action_reset_slots
