--- a/conda_env/rasa_test.yml
+++ b/conda_env/rasa_test.yml
@@ -11,3 +11,4 @@ dependencies:
       - rasa[transformers]==3.4.6
       - https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.5.0/ru_core_news_md-3.5.0-py3-none-any.whl
       - streamlit==1.20.0
+      - transitions==0.9.0
