--- a/src/data/rules.yml
+++ b/src/data/rules.yml
@@ -11,5 +11,14 @@ rules:
   - rule: wrong command
     steps:
       - intent: wrong_command
-      - action: utter_wrong_command
+      - action: num_form
+      - active_loop: num_form
+
+  - rule: submit wrong command
+    condition:
+      - active_loop: num_form
+    steps:
+      - action: num_form
+      - active_loop: null
+      - action: action_fix_command
       - action: action_reset_slots
